Фиксация Api
